reduce cyclometric complexity

--- a/classes/Efortmeyer-Polar-Api-InMemoryAppConfig.html
+++ b/classes/Efortmeyer-Polar-Api-InMemoryAppConfig.html
@@ -116,7 +116,7 @@
         <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="Api/InMemoryAppConfig.php"><a href="files/api-inmemoryappconfig.html"><abbr title="Api/InMemoryAppConfig.php">InMemoryAppConfig.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">40</span>
+    <span class="phpdocumentor-element-found-in__line">42</span>
 
     </aside>
 
@@ -195,7 +195,7 @@
     <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="Api/InMemoryAppConfig.php"><a href="files/api-inmemoryappconfig.html"><abbr title="Api/InMemoryAppConfig.php">InMemoryAppConfig.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">44</span>
+    <span class="phpdocumentor-element-found-in__line">46</span>
 
     </aside>
 
@@ -228,7 +228,7 @@
     <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="Api/InMemoryAppConfig.php"><a href="files/api-inmemoryappconfig.html"><abbr title="Api/InMemoryAppConfig.php">InMemoryAppConfig.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">52</span>
+    <span class="phpdocumentor-element-found-in__line">54</span>
 
     </aside>
 
@@ -236,7 +236,7 @@
 
     <code class="phpdocumentor-code phpdocumentor-signature ">
     <span class="phpdocumentor-signature__visibility">public</span>
-                    <span class="phpdocumentor-signature__name">add</span><span>(</span><span class="phpdocumentor-signature__argument"><span class="phpdocumentor-signature__argument__return-type"><a href="classes/Efortmeyer-Polar-Api-Attributes-Config-Key.html"><abbr title="\Efortmeyer\Polar\Api\Attributes\Config\Key">Key</abbr></a>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$key</span></span><span class="phpdocumentor-signature__argument"><span>, </span><span class="phpdocumentor-signature__argument__return-type"><a href="classes/Efortmeyer-Polar-Stock-Attributes-Config-AttributeConfig.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\Config\AttributeConfig">AttributeConfig</abbr></a>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$config</span></span><span>)</span><span> : </span><span class="phpdocumentor-signature__response_type">void</span></code>
+                    <span class="phpdocumentor-signature__name">add</span><span>(</span><span class="phpdocumentor-signature__argument"><span class="phpdocumentor-signature__argument__return-type"><a href="classes/Efortmeyer-Polar-Api-Attributes-Config-Key.html"><abbr title="\Efortmeyer\Polar\Api\Attributes\Config\Key">Key</abbr></a>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$key</span></span><span class="phpdocumentor-signature__argument"><span>, </span><span class="phpdocumentor-signature__argument__return-type"><a href="classes/Efortmeyer-Polar-Core-Attributes-Config-AttributeConfig.html"><abbr title="\Efortmeyer\Polar\Core\Attributes\Config\AttributeConfig">AttributeConfig</abbr></a>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$config</span></span><span>)</span><span> : </span><span class="phpdocumentor-signature__response_type">void</span></code>
 
     
         <h5 class="phpdocumentor-argument-list__heading">Parameters</h5>
@@ -251,7 +251,7 @@
             </dd>
                     <dt class="phpdocumentor-argument-list__entry">
                 <span class="phpdocumentor-signature__argument__name">$config</span>
-                : <span class="phpdocumentor-signature__argument__return-type"><a href="classes/Efortmeyer-Polar-Stock-Attributes-Config-AttributeConfig.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\Config\AttributeConfig">AttributeConfig</abbr></a></span>
+                : <span class="phpdocumentor-signature__argument__return-type"><a href="classes/Efortmeyer-Polar-Core-Attributes-Config-AttributeConfig.html"><abbr title="\Efortmeyer\Polar\Core\Attributes\Config\AttributeConfig">AttributeConfig</abbr></a></span>
                             </dt>
             <dd class="phpdocumentor-argument-list__definition">
                     <section class="phpdocumentor-description"></section>
@@ -280,7 +280,7 @@
     <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="Api/InMemoryAppConfig.php"><a href="files/api-inmemoryappconfig.html"><abbr title="Api/InMemoryAppConfig.php">InMemoryAppConfig.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">60</span>
+    <span class="phpdocumentor-element-found-in__line">62</span>
 
     </aside>
 
