--- a/indices/files.html
+++ b/indices/files.html
@@ -95,10 +95,12 @@
         <ul class="phpdocumentor-list">
                     <li><a href="files/api-app.html"><abbr title="Api/App.php">App.php</abbr></a></li>
                     <li><a href="files/api-appconfiginterface.html"><abbr title="Api/AppConfigInterface.php">AppConfigInterface.php</abbr></a></li>
-                    <li><a href="files/stock-attributes-config-attributeconfig.html"><abbr title="Stock/Attributes/Config/AttributeConfig.php">AttributeConfig.php</abbr></a></li>
+                    <li><a href="files/core-attributes-attribute.html"><abbr title="Core/Attributes/Attribute.php">Attribute.php</abbr></a></li>
+                    <li><a href="files/core-attributes-attributecollection.html"><abbr title="Core/Attributes/AttributeCollection.php">AttributeCollection.php</abbr></a></li>
+                    <li><a href="files/core-attributes-config-attributeconfig.html"><abbr title="Core/Attributes/Config/AttributeConfig.php">AttributeConfig.php</abbr></a></li>
                     <li><a href="files/api-attributes-config-attributeconfiginterface.html"><abbr title="Api/Attributes/Config/AttributeConfigInterface.php">AttributeConfigInterface.php</abbr></a></li>
                     <li><a href="files/api-attributes-attributeinterface.html"><abbr title="Api/Attributes/AttributeInterface.php">AttributeInterface.php</abbr></a></li>
-                    <li><a href="files/stock-automaticdatefield.html"><abbr title="Stock/AutomaticDateField.php">AutomaticDateField.php</abbr></a></li>
+                    <li><a href="files/core-fields-automaticdatefield.html"><abbr title="Core/Fields/AutomaticDateField.php">AutomaticDateField.php</abbr></a></li>
                     <li><a href="files/stock-attributes-automaticdatevalue.html"><abbr title="Stock/Attributes/AutomaticDateValue.php">AutomaticDateValue.php</abbr></a></li>
                     <li><a href="files/stock-attributes-config-automaticdatevaluekey.html"><abbr title="Stock/Attributes/Config/AutomaticDateValueKey.php">AutomaticDateValueKey.php</abbr></a></li>
                     <li><a href="files/core-polyfill-autoload.html"><abbr title="Core/Polyfill/autoload.php">autoload.php</abbr></a></li>
@@ -119,8 +121,8 @@
                     <li><a href="files/core-attributes-config-constructorargs.html"><abbr title="Core/Attributes/Config/ConstructorArgs.php">ConstructorArgs.php</abbr></a></li>
                     <li><a href="files/core-attributes-config-constructorargsnone.html"><abbr title="Core/Attributes/Config/ConstructorArgsNone.php">ConstructorArgsNone.php</abbr></a></li>
                     <li><a href="files/core-parsers-annotation-constructorargsnone.html"><abbr title="Core/Parsers/Annotation/ConstructorArgsNone.php">ConstructorArgsNone.php</abbr></a></li>
-                    <li><a href="files/core-parsers-annotation-constructorargsone.html"><abbr title="Core/Parsers/Annotation/ConstructorArgsOne.php">ConstructorArgsOne.php</abbr></a></li>
                     <li><a href="files/core-attributes-config-constructorargsone.html"><abbr title="Core/Attributes/Config/ConstructorArgsOne.php">ConstructorArgsOne.php</abbr></a></li>
+                    <li><a href="files/core-parsers-annotation-constructorargsone.html"><abbr title="Core/Parsers/Annotation/ConstructorArgsOne.php">ConstructorArgsOne.php</abbr></a></li>
                     <li><a href="files/core-parsers-annotation-constructorargsonewithvalue.html"><abbr title="Core/Parsers/Annotation/ConstructorArgsOneWithValue.php">ConstructorArgsOneWithValue.php</abbr></a></li>
                     <li><a href="files/core-attributes-config-constructorargspropertyname.html"><abbr title="Core/Attributes/Config/ConstructorArgsPropertyName.php">ConstructorArgsPropertyName.php</abbr></a></li>
                     <li><a href="files/core-attributes-config-constructorargspropertyvalue.html"><abbr title="Core/Attributes/Config/ConstructorArgsPropertyValue.php">ConstructorArgsPropertyValue.php</abbr></a></li>
@@ -130,7 +132,7 @@
                 </ul>
                                     <h3>D</h3>
         <ul class="phpdocumentor-list">
-                    <li><a href="files/stock-datefield.html"><abbr title="Stock/DateField.php">DateField.php</abbr></a></li>
+                    <li><a href="files/core-fields-datefield.html"><abbr title="Core/Fields/DateField.php">DateField.php</abbr></a></li>
                     <li><a href="files/api-uielements-dateformcontrol.html"><abbr title="Api/UIElements/DateFormControl.php">DateFormControl.php</abbr></a></li>
                     <li><a href="files/stock-attributes-dateformat.html"><abbr title="Stock/Attributes/DateFormat.php">DateFormat.php</abbr></a></li>
                     <li><a href="files/stock-attributes-config-dateformatkey.html"><abbr title="Stock/Attributes/Config/DateFormatKey.php">DateFormatKey.php</abbr></a></li>
@@ -139,16 +141,18 @@
                     <li><a href="files/stock-attributes-defaultformcontrol.html"><abbr title="Stock/Attributes/DefaultFormControl.php">DefaultFormControl.php</abbr></a></li>
                     <li><a href="files/stock-attributes-defaultlabel.html"><abbr title="Stock/Attributes/DefaultLabel.php">DefaultLabel.php</abbr></a></li>
                     <li><a href="files/stock-attributes-defaultmaxlength.html"><abbr title="Stock/Attributes/DefaultMaxLength.php">DefaultMaxLength.php</abbr></a></li>
-                    <li><a href="files/core-defaults.html"><abbr title="Core/Defaults.php">Defaults.php</abbr></a></li>
+                    <li><a href="files/stock-attributes-defaults.html"><abbr title="Stock/Attributes/Defaults.php">Defaults.php</abbr></a></li>
                 </ul>
                                     <h3>E</h3>
         <ul class="phpdocumentor-list">
-                    <li><a href="files/stock-entry.html"><abbr title="Stock/Entry.php">Entry.php</abbr></a></li>
+                    <li><a href="files/core-entry.html"><abbr title="Core/Entry.php">Entry.php</abbr></a></li>
                     <li><a href="files/api-uielements-errorbanner.html"><abbr title="Api/UIElements/ErrorBanner.php">ErrorBanner.php</abbr></a></li>
                 </ul>
                                     <h3>F</h3>
         <ul class="phpdocumentor-list">
-                    <li><a href="files/stock-field.html"><abbr title="Stock/Field.php">Field.php</abbr></a></li>
+                    <li><a href="files/core-fields-fieldmetadata.html"><abbr title="Core/Fields/FieldMetadata.php">FieldMetadata.php</abbr></a></li>
+                    <li><a href="files/core-fields-fieldmetadataconfig.html"><abbr title="Core/Fields/FieldMetadataConfig.php">FieldMetadataConfig.php</abbr></a></li>
+                    <li><a href="files/core-fields-fieldmetadatafactory.html"><abbr title="Core/Fields/FieldMetadataFactory.php">FieldMetadataFactory.php</abbr></a></li>
                     <li><a href="files/api-rendering-files-file.html"><abbr title="Api/Rendering/Files/File.php">File.php</abbr></a></li>
                     <li><a href="files/api-uielements-form.html"><abbr title="Api/UIElements/Form.php">Form.php</abbr></a></li>
                     <li><a href="files/api-uielements-formcontrol.html"><abbr title="Api/UIElements/FormControl.php">FormControl.php</abbr></a></li>
@@ -165,7 +169,7 @@
                     <li><a href="files/api-inmemoryappconfig.html"><abbr title="Api/InMemoryAppConfig.php">InMemoryAppConfig.php</abbr></a></li>
                     <li><a href="files/stock-attributes-input.html"><abbr title="Stock/Attributes/Input.php">Input.php</abbr></a></li>
                     <li><a href="files/stock-attributes-config-inputkey.html"><abbr title="Stock/Attributes/Config/InputKey.php">InputKey.php</abbr></a></li>
-                    <li><a href="files/stock-attributes-inputtypes.html"><abbr title="Stock/Attributes/InputTypes.php">InputTypes.php</abbr></a></li>
+                    <li><a href="files/core-attributes-inputtypes.html"><abbr title="Core/Attributes/InputTypes.php">InputTypes.php</abbr></a></li>
                 </ul>
                                                         <h3>K</h3>
         <ul class="phpdocumentor-list">
@@ -178,27 +182,28 @@
                 </ul>
                                     <h3>M</h3>
         <ul class="phpdocumentor-list">
-                    <li><a href="files/stock-validation-maxlength.html"><abbr title="Stock/Validation/MaxLength.php">MaxLength.php</abbr></a></li>
                     <li><a href="files/stock-attributes-maxlength.html"><abbr title="Stock/Attributes/MaxLength.php">MaxLength.php</abbr></a></li>
+                    <li><a href="files/stock-validation-maxlength.html"><abbr title="Stock/Validation/MaxLength.php">MaxLength.php</abbr></a></li>
                     <li><a href="files/stock-attributes-config-maxlengthkey.html"><abbr title="Stock/Attributes/Config/MaxLengthKey.php">MaxLengthKey.php</abbr></a></li>
-                    <li><a href="files/core-messages.html"><abbr title="Core/Messages.php">Messages.php</abbr></a></li>
+                    <li><a href="files/stock-attributes-messages.html"><abbr title="Stock/Attributes/Messages.php">Messages.php</abbr></a></li>
+                    <li><a href="files/api-uielements-messages.html"><abbr title="Api/UIElements/Messages.php">Messages.php</abbr></a></li>
                     <li><a href="files/api-model.html"><abbr title="Api/Model.php">Model.php</abbr></a></li>
                 </ul>
                                     <h3>N</h3>
         <ul class="phpdocumentor-list">
-                    <li><a href="files/stock-attributes-none.html"><abbr title="Stock/Attributes/None.php">None.php</abbr></a></li>
                     <li><a href="files/stock-validation-noop.html"><abbr title="Stock/Validation/Noop.php">Noop.php</abbr></a></li>
                     <li><a href="files/stock-attributes-noopvalidate.html"><abbr title="Stock/Attributes/NoopValidate.php">NoopValidate.php</abbr></a></li>
-                    <li><a href="files/stock-numberfield.html"><abbr title="Stock/NumberField.php">NumberField.php</abbr></a></li>
+                    <li><a href="files/core-fields-numberfield.html"><abbr title="Core/Fields/NumberField.php">NumberField.php</abbr></a></li>
                     <li><a href="files/api-uielements-numberformcontrol.html"><abbr title="Api/UIElements/NumberFormControl.php">NumberFormControl.php</abbr></a></li>
                 </ul>
                                                         <h3>P</h3>
         <ul class="phpdocumentor-list">
-                    <li><a href="files/stock-propertyannotation.html"><abbr title="Stock/PropertyAnnotation.php">PropertyAnnotation.php</abbr></a></li>
+                    <li><a href="files/core-propertyannotation.html"><abbr title="Core/PropertyAnnotation.php">PropertyAnnotation.php</abbr></a></li>
                 </ul>
                                                         <h3>R</h3>
         <ul class="phpdocumentor-list">
                     <li><a href="files/api-requesthandler.html"><abbr title="Api/RequestHandler.php">RequestHandler.php</abbr></a></li>
+                    <li><a href="files/core-attributes-requiredattributenotfoundexception.html"><abbr title="Core/Attributes/RequiredAttributeNotFoundException.php">RequiredAttributeNotFoundException.php</abbr></a></li>
                 </ul>
                                     <h3>S</h3>
         <ul class="phpdocumentor-list">
@@ -210,14 +215,14 @@
         <ul class="phpdocumentor-list">
                     <li><a href="files/core-rendering-template.html"><abbr title="Core/Rendering/Template.php">Template.php</abbr></a></li>
                     <li><a href="files/api-rendering-templatecontext.html"><abbr title="Api/Rendering/TemplateContext.php">TemplateContext.php</abbr></a></li>
-                    <li><a href="files/stock-textareafield.html"><abbr title="Stock/TextAreaField.php">TextAreaField.php</abbr></a></li>
+                    <li><a href="files/core-fields-textareafield.html"><abbr title="Core/Fields/TextAreaField.php">TextAreaField.php</abbr></a></li>
                     <li><a href="files/api-uielements-textareaformcontrol.html"><abbr title="Api/UIElements/TextAreaFormControl.php">TextAreaFormControl.php</abbr></a></li>
-                    <li><a href="files/stock-textfield.html"><abbr title="Stock/TextField.php">TextField.php</abbr></a></li>
+                    <li><a href="files/core-fields-textfield.html"><abbr title="Core/Fields/TextField.php">TextField.php</abbr></a></li>
                     <li><a href="files/api-uielements-textformcontrol.html"><abbr title="Api/UIElements/TextFormControl.php">TextFormControl.php</abbr></a></li>
                     <li><a href="files/core-parsers-annotation-token.html"><abbr title="Core/Parsers/Annotation/Token.php">Token.php</abbr></a></li>
                     <li><a href="files/core-parsers-annotation-typetag.html"><abbr title="Core/Parsers/Annotation/TypeTag.php">TypeTag.php</abbr></a></li>
-                    <li><a href="files/stock-attributes-typevalidation.html"><abbr title="Stock/Attributes/TypeValidation.php">TypeValidation.php</abbr></a></li>
                     <li><a href="files/stock-validation-typevalidation.html"><abbr title="Stock/Validation/TypeValidation.php">TypeValidation.php</abbr></a></li>
+                    <li><a href="files/stock-attributes-typevalidation.html"><abbr title="Stock/Attributes/TypeValidation.php">TypeValidation.php</abbr></a></li>
                     <li><a href="files/stock-attributes-config-typevalidationkey.html"><abbr title="Stock/Attributes/Config/TypeValidationKey.php">TypeValidationKey.php</abbr></a></li>
                 </ul>
                                                         <h3>V</h3>
