--- a/namespaces/efortmeyer-polar-api-uielements.html
+++ b/namespaces/efortmeyer-polar-api-uielements.html
@@ -127,6 +127,8 @@
         <dd></dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Api-UIElements-TextFormControl.html"><abbr title="\Efortmeyer\Polar\Api\UIElements\TextFormControl">TextFormControl</abbr></a></dt>
         <dd></dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Api-UIElements-Messages.html"><abbr title="\Efortmeyer\Polar\Api\UIElements\Messages">Messages</abbr></a></dt>
+        <dd>Holds default message values.</dd>
     
     
     </dl>
