--- a/namespaces/efortmeyer-polar-core-attributes-config.html
+++ b/namespaces/efortmeyer-polar-core-attributes-config.html
@@ -130,6 +130,8 @@ constructor argument.</dd>
 uses the name of the property it configures as it&#039;s
 first constructor argument.  The second argument is
 provided in the annotation or native attribute.</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Core-Attributes-Config-AttributeConfig.html"><abbr title="\Efortmeyer\Polar\Core\Attributes\Config\AttributeConfig">AttributeConfig</abbr></a></dt>
+        <dd></dd>
     
     
     </dl>
