--- a/namespaces/efortmeyer-polar-stock-attributes.html
+++ b/namespaces/efortmeyer-polar-stock-attributes.html
@@ -135,18 +135,18 @@ default format.</dd>
 is not over the default max length.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-Input.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\Input">Input</abbr></a></dt>
         <dd>Configures a property to a given form control type.</dd>
-            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-InputTypes.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\InputTypes">InputTypes</abbr></a></dt>
-        <dd></dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-Label.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\Label">Label</abbr></a></dt>
         <dd>Configures the form label text of a property.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-MaxLength.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\MaxLength">MaxLength</abbr></a></dt>
         <dd>Configures the max length of a property&#039;s value.</dd>
-            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-None.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\None">None</abbr></a></dt>
-        <dd>Provides `noop` configuration.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-NoopValidate.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\NoopValidate">NoopValidate</abbr></a></dt>
         <dd>Provides `noop` validation.</dd>
             <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-TypeValidation.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\TypeValidation">TypeValidation</abbr></a></dt>
         <dd>Configures validation of the type of a property&#039;s value.</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-Defaults.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\Defaults">Defaults</abbr></a></dt>
+        <dd>Holds default configuration values.</dd>
+            <dt class="phpdocumentor-table-of-contents__entry -class"><a href="classes/Efortmeyer-Polar-Stock-Attributes-Messages.html"><abbr title="\Efortmeyer\Polar\Stock\Attributes\Messages">Messages</abbr></a></dt>
+        <dd>Contains text for messages.</dd>
     
     
     </dl>
